@@ -2,7 +2,7 @@ Package: PureCN
 Type: Package
 Title: Copy number calling and SNV classification using
     targeted short read sequencing
-Version: 1.21.0
+Version: 1.21.1
 Date: 2020-10-15
 Authors@R: c(person("Markus", "Riester",
                     role = c("aut", "cre"),
@@ -58,7 +58,7 @@ Suggests:
     rmarkdown,
     testthat
 Enhances:
-    genomicsdb    
+    genomicsdb (>= 0.0.3)
 VignetteBuilder: knitr
 License: Artistic-2.0
 URL: https://github.com/lima1/PureCN
