@@ -978,10 +978,11 @@ na.rm = TRUE)
     return(FALSE)
 }
 
-.gcGeneToCoverage <- function(interval.file, min.coverage) {
+.gcGeneToCoverage <- function(interval.file, min.coverage, min.total.counts) {
     gc.data <- readCoverageFile(interval.file)
     gc.data$average.coverage <- min.coverage
     gc.data$coverage <- min.coverage * width(gc.data)
+    gc.data$counts <- Inf
     gc.data
 }
 
