@@ -1,11 +1,0 @@
-#' Calculate interval weights
-#' 
-#' This function is now automatically called by \code{\link{createNormalDatabase}}
-#' and is thus defunct.
-#' 
-#' @author Markus Riester
-#' 
-#' @export calculateIntervalWeights
-calculateIntervalWeights <- function() {
-    .Defunct("createNormalDatabase")
-}    
